test/statements/sungeun/bad_break.good
bad_break.chpl:29: error: could not find label 'l3' for 'break' statement
bad_break.chpl:32: error: could not find label 'l2' for 'break' statement
bad_break.chpl:37: error: could not find label 'l1' for 'break' statement
